Add IrbisRequest object

--- a/PdfAttacher/PdfAttacher.csproj
+++ b/PdfAttacher/PdfAttacher.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>pdf-attacher.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr4.Runtime.net40, Version=4.3.0.0, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\ManagedClient.1.5.22.98\lib\net40\Antlr4.Runtime.net40.dll</HintPath>
@@ -67,6 +70,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="IrbisHandler.cs" />
+    <Compile Include="IrbisRequest.cs" />
     <Compile Include="IStemmer.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="Program.cs" />
@@ -100,6 +104,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="pdf-attacher.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
